--- a/tex/body.tex
+++ b/tex/body.tex
@@ -1,37 +1,33 @@
 \section{Undantag från tillståndsplikt}
 
-I sverige regleras all radioanvändning med sändare som inte kräver att
-man söker tillstånd för det i en skrift som ges ut av Post- och
-Telestyrelsen (PTS) och som bär namnet "Untandag från
-tillståndsplikt". Denna skrift uppdateras lite då och då när det finns
-behov av det och här regleras all radiotrafik som inte kräver särskilt
-tillstånd.
+I sverige regleras all radioanvändning med sändare som inte kräver att man söker
+tillstånd för det i en skrift som ges ut av Post- och Telestyrelsen (PTS) och
+som bär namnet "Untandag från tillståndsplikt". Denna skrift uppdateras lite då
+och då när det finns behov av det och här regleras all radiotrafik som inte
+kräver särskilt tillstånd.
 
-Radiotrafik som kräver tillstånd regleras i andra dokument eller av
-respektive myndighet som svarar för examinering och tillståndsgivning
-exempelvis luftfartsverket för luftfartsradio och så vidare.
-Försvarsmakten svarar också för användning av militär radio och har
-långt gående möjligheter att sända på frekvenser som i fredstid
-används för annat.
+Radiotrafik som kräver tillstånd regleras i andra dokument eller av respektive
+myndighet som svarar för examinering och tillståndsgivning exempelvis
+luftfartsverket för luftfartsradio och så vidare. Försvarsmakten svarar också
+för användning av militär radio och har långt gående möjligheter att sända på
+frekvenser som i fredstid används för annat.
 
-Enklast finner man det gällande dokumentet genom att söka efter det på
-PTS hemsida pts.se.
+Enklast finner man det gällande dokumentet genom att söka efter det på PTS
+hemsida pts.se.
 
 \subsection{Tillståndsfri radio}
 
-Det är i undantagsföreskriften du hittar alla villkor som hänger
-samman med tillståndsfri radiosändning. Här står effekter,
-modulationstyper och användningsområden upptagna för respektive
-frekvens samt andra villkor.
+Det är i undantagsföreskriften du hittar alla villkor som hänger samman med
+tillståndsfri radiosändning. Här står effekter, modulationstyper och
+användningsområden upptagna för respektive frekvens samt andra villkor.
 
-Det är också i denna skrift som användningen av Amatörradio regleras
-rent juridiskt. Sedan finns inte alla rekommendationer och liknande
-med i denna skrift, här får man själv hitta det reglemente som
-amatörradioorganisationer mm kommit överens om hur man ska nyttja de
-olika bandet.
+Det är också i denna skrift som användningen av Amatörradio regleras rent
+juridiskt. Sedan finns inte alla rekommendationer och liknande med i denna
+skrift, här får man själv hitta det reglemente som amatörradioorganisationer mm
+kommit överens om hur man ska nyttja de olika bandet.
 
-Det innebär att radioanvändning för diverse ändamål regleras i denna
-skrift så som:
+Det innebär att radioanvändning för diverse ändamål regleras i denna skrift så
+som:
 
 \begin{itemize}
  \item PR-radio på 27 MHz
@@ -42,17 +38,16 @@ skrift så som:
  \item ... och mycket mer.
 \end{itemize}
 
-En sak som är intressant är att amatörradio behandlas också i samma
-skrift trots det kräver ett godkänt avlagt prov som leder till ett
-amatörradiocertifikat. Tidigare reglerades amatörradio separat på
-Televerkets tid i en författningssamling som kallades för Televerket
-B:90. Denna har dock helt ersatts av bestämmelserna i
-undantagsföreskriften.
+En sak som är intressant är att amatörradio behandlas också i samma skrift trots
+det kräver ett godkänt avlagt prov som leder till ett amatörradiocertifikat.
+Tidigare reglerades amatörradio separat på Televerkets tid i en
+författningssamling som kallades för Televerket B:90. Denna har dock helt
+ersatts av bestämmelserna i undantagsföreskriften.
 
-Däremot krävs det numera inget särskilt tillstånd som det gjorde
-tidigare för att få använda amatörradio, annat än att den som opererar
-radioutrustningen skall ha, eller stå under uppsikt av, en person med
-giltigt amatörradiocertifikat.
+Däremot krävs det numera inget särskilt tillstånd som det gjorde tidigare för
+att få använda amatörradio, annat än att den som opererar radioutrustningen
+skall ha, eller stå under uppsikt av, en person med giltigt
+amatörradiocertifikat.
 
 \section{Signaler och anrop}
 \subsection{Landsprefix}
@@ -99,13 +94,12 @@ Här är inte alla länder med utan de vanligaste som körs från Sverige.
 
 \subsection{Svenska signaler}
 
-Svenska signaler förekommer inom ett antal prefix. Enligt ITU
-disponerar Sverige förljande signalserier: 7SA--7SZ samt 8SA--8SZ och
-vidare de mer kända SAA--SMZ. Dessa har används till varierande
-ändamål, exempelvis har flyget signaler i serien SE-AAA--ZZZ. Polisen
-har tidigare använt signaler i serien SHA plus fyra siffror, detta är
-nu ersatt med nytt system i.o.m. RAKEL. Räddningstjänsten använde SDA
-med fyra siffror. Signaler som 7SA + 4 siffror används för mindre
+Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverige
+förljande signalserier: 7SA--7SZ samt 8SA--8SZ och vidare de mer kända SAA--SMZ.
+Dessa har används till varierande ändamål, exempelvis har flyget signaler i
+serien SE-AAA--ZZZ. Polisen har tidigare använt signaler i serien SHA plus fyra
+siffror, detta är nu ersatt med nytt system i.o.m. RAKEL. Räddningstjänsten
+använde SDA med fyra siffror. Signaler som 7SA + 4 siffror används för mindre
 yrkesbåtar SC + 4 siffror för fritidsbåtar.
 
 Amatörradion använder ett antal signaler, de viktigaste är:
@@ -118,19 +112,18 @@ Amatörradion använder ett antal signaler, de viktigaste är:
 	SL & Militära signaler (som regel två- eller treställiga efter distriktsiffran)
 \end{tabular}
 
-Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt
-och sedan 2-ställiga eller 3-ställiga bokstavskombinationer som är den
-personliga signalen. Exempel är SM0UEI som är min egen signal,
-distriktsiffran är 0 dvs hemmavarande i Stockholms län. Ett annat
-exempel kan vara SK5JV tidigare Fagersta amatörradioklubb.
+Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt och sedan
+2-ställiga eller 3-ställiga bokstavskombinationer som är den personliga
+signalen. Exempel är SM0UEI som är min egen signal, distriktsiffran är 0 dvs
+hemmavarande i Stockholms län. Ett annat exempel kan vara SK5JV tidigare
+Fagersta amatörradioklubb.
 
 Repeatrar som tillhör klubbar får ofta signal efter klubben med
 tillägg /R för repeater.
 
-Det finns numera även ett stort antal signaler som är tillfälliga
-eller knutna till särskilda event, exempelvis scoutverksamhet som
-ibland sänder amatörradio och särskilda forskningsfartyg, flyg- och
-rymdfart mm.
+Det finns numera även ett stort antal signaler som är tillfälliga eller knutna
+till särskilda event, exempelvis scoutverksamhet som ibland sänder amatörradio
+och särskilda forskningsfartyg, flyg- och rymdfart mm.
 
 Som suffix används följande:
 
