--- a/tex/body-vhf.tex
+++ b/tex/body-vhf.tex
@@ -437,7 +437,7 @@ bandplanerna i den region man är.
   tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt
   information.}
 
-\subsubsection{Införande av 12.5~kHz kanalavstånd}
+\subsubsection{Införande av 12.5\,kHz kanalavstånd}
 
 För ett antal år sedan beslutade man sig att gå mot ett smalare
 kanalraster på VHF och UHF och införde härmed kanalavstånd på 12.5~kHz
