--- a/tex/body.tex
+++ b/tex/body.tex
@@ -1,5 +1,5 @@
 
-\subsection{Tillståndsfri radio}
+\section{Tillståndsfri radio}
 
 Det är i undantagsföreskriften du hittar alla villkor som hänger samman med
 tillståndsfri radiosändning. Här står effekter, modulationstyper och
@@ -35,33 +35,30 @@ amatörradiocertifikat.
 
 \subsection{Amatörradiocertifikat}
 
-Amatörradio har en lång historia och sträcker sig tillbaka till
-radions barndom. Rent formellt så var det i USA i slutet av 1890-talet
-som radioamatörer började sända telegram till varandra med den teknik
-som fanns till buds då. Det blev mycket populärt bland elingenjörer
-och andra teknikintresserade och runt 1910 började man få problem med
-interferens och störningar ochg beslutade sig för att formalisera det
-hela. Olika restriktioner infördes men i och med detta regelverk fick
-vi också vissa krav på kunskaper för att operera radiosändare.
+Amatörradio har en lång historia och sträcker sig tillbaka till radions
+barndom. Rent formellt så var det i USA i slutet av 1890-talet som radioamatörer
+började sända telegram till varandra med den teknik som fanns till buds då. Det
+blev mycket populärt bland elingenjörer och andra teknikintresserade och runt
+1910 började man få problem med interferens och störningar ochg beslutade sig
+för att formalisera det hela. Olika restriktioner infördes men i och med detta
+regelverk fick vi också vissa krav på kunskaper för att operera radiosändare.
 
 \subsubsection{Amatörradiocertifikat HAREC}
 
-Om det fulla amatörradiocertifikatet är ett certifikat som är utformat
-efter de principer som anges i HAREC T/R 61-02, Harmonised Amateur
-Radio Examination Certificate, Vilnius 2004, uppdaterad 2014 och 2016.
+Om det fulla amatörradiocertifikatet är ett certifikat som är utformat efter de
+principer som anges i HAREC T/R 61-02, Harmonised Amateur Radio Examination
+Certificate, Vilnius 2004, uppdaterad 2014 och 2016.
 
 Detta är ett ganska omfattande dokument och i Sverige så har vi t.ex.
-KonCEPT-boken som används för ubildning av nya radioamatörer, den kan
-laddas ned som PDF från ssa.se eller beställas som papperbok i deras
-webshop. För att bli radioamatör behöver man svara tillräckligt många
-rätt på två stycken delprov, ett teknikprov som avhandlar elektriska
-kretsar, radioteknik, sändare och mottagare, vågutbredning,
-eletromagnetiska fält, grundläggande matematik och fysik som är
-tillämplig, viss komponentlära, förståelse för störningar och att bli
-störd, filter och antenner mm. Det andra provet är ett prov över
-reglementet som tillämpas, både lagar och författningar som reglerar
-amatörradio men även saker som mer praktiska som exempelvis
-bokstaveringsalfabetet och Q-koder mm.
+KonCEPT-boken som används för ubildning av nya radioamatörer, den kan laddas ned
+som PDF från ssa.se eller beställas som papperbok i deras webshop. För att bli
+radioamatör behöver man svara tillräckligt många rätt på två stycken delprov,
+ett teknikprov som avhandlar elektriska kretsar, radioteknik, sändare och
+mottagare, vågutbredning, eletromagnetiska fält, grundläggande matematik och
+fysik som är tillämplig, viss komponentlära, förståelse för störningar och att
+bli störd, filter och antenner mm. Det andra provet är ett prov över reglementet
+som tillämpas, både lagar och författningar som reglerar amatörradio men även
+saker som mer praktiska som exempelvis bokstaveringsalfabetet och Q-koder mm.
 
 Ett godkänt sådant prov ger möjlighet att operera som radioamatör på
 en stor mängd olika frekvensband, alla de som i Sverige är utmärkta
@@ -70,84 +67,83 @@ som amatörradioband.
 \subsubsection{Amatörradiocertifikat insteg}
 \label{sec:instegscertifikat}
 
-Instegscertifikatet är ett förenklat teknikprov men ungefär samma prov
-vad gäller reglementen osv. Det förenklade teknikprovet innebär dock
-en del begränsningar eftersom instegsamatören inte kan ges riktigt
-samma förtroende att sända på alla frekvenser. Exempelvis har man
-därmed begränsat de frekvensband som får användas till sådana som är
-exklusiva för amatörradio i Sverige.
+Instegscertifikatet är ett förenklat teknikprov men ungefär samma prov vad
+gäller reglementen osv. Det förenklade teknikprovet innebär dock en del
+begränsningar eftersom instegsamatören inte kan ges riktigt samma förtroende att
+sända på alla frekvenser. Exempelvis har man därmed begränsat de frekvensband
+som får användas till sådana som är exklusiva för amatörradio i Sverige.
 
 Konskapskraven i Sverige skall motsvara det som finns i ''ECC Report 89'': \\
 \url{https://docdb.cept.org/download/409}.
 
 PTS förväntas delegera examineringen till SSA och deras utsedda provförrättare
-och en särskild utbildningbok för instegscertet håller på att tas fram just
-nu och ska snart gå till tryck (Mars 2025).
+och en särskild utbildningbok för instegscertet håller på att tas fram just nu
+och ska snart gå till tryck (Mars 2025).
 
-Tyvärr fick inte SSA gehör för sin remiss att även öppna 70 cm bandet
-för instegscertifikat. Bandet är inte länge ett exklusivt amatörband
-men vi delar det med lågeffektssändare för fjärrstyrning mm och det
-bör inte finnas hinder då fullcertare får sända med 200\,W i bandet och
-kan söka högeffektstillstånd på upp till 1\,kW.
+Tyvärr fick inte SSA gehör för sin remiss att även öppna 70 cm bandet för
+instegscertifikat. Bandet är inte länge ett exklusivt amatörband men vi delar
+det med lågeffektssändare för fjärrstyrning mm och det bör inte finnas hinder då
+fullcertare får sända med 200\,W i bandet och kan söka högeffektstillstånd på
+upp till 1\,kW.
 
-Radioamatörer med instegscertifikat tilldelas anropssignaler i serien SH
-som även tidigare använts för noviser. Vid uppgradering till fullt cert
-får man i stället en signal i SA-serien är tanken.
+Radioamatörer med instegscertifikat tilldelas anropssignaler i serien SH som
+även tidigare använts för noviser. Vid uppgradering till fullt cert får man i
+stället en signal i SA-serien är tanken.
 
 \subsubsection{Amatörradioband för instegscertifikat}
 
 \begin{table}[H]
 \centering
 \begin{tabular}{rrlr}
-	\textbf{Frekvens} & \textbf{Våglängd} & \textbf{Notiser}               & \textbf{Max Effekt} \\ \hline
-	            7 MHz &          40 meter &                                &           25\,W PEP \\
-	           14 MHz &          20 meter & 25\,W PEP                      &                     \\
-	           21 MHz &          15 meter &                                &           25\,W PEP \\
-	           28 MHz &          20 meter & Liknande utbredning som 27 MHz &           25\,W PEP \\
-	           50 MHz &           6 meter &                                &           25\,W PEP \\ \hline
-	          144 MHz &           2 meter &                                &           25\,W ERP
+  \textbf{Frekvens} & \textbf{Våglängd} & \textbf{Notiser}               & \textbf{Max Effekt} \\ \hline
+              7 MHz &          40 meter &                                &           25\,W PEP \\
+             14 MHz &          20 meter & 25\,W PEP                      &                     \\
+             21 MHz &          15 meter &                                &           25\,W PEP \\
+             28 MHz &          20 meter & Liknande utbredning som 27 MHz &           25\,W PEP \\
+             50 MHz &           6 meter &                                &           25\,W PEP \\ \hline
+            144 MHz &           2 meter &                                &           25\,W ERP
+
+
 \end{tabular}
-\caption{Amatörradioband i sverige upp till 70 cm}
+\caption{Amatörradioband öppna för instegscertifikat i Ssverige}
 \end{table}
 
-50\,MHz är egentligen ett VHF-band men räknas ofta till kortvåg (HF)
-då de flesta amatörradiostationer för kortvåg omfattar även 6\,m-bandet.
+50\,MHz är egentligen ett VHF-band men räknas ofta till kortvåg (HF) då de
+flesta amatörradiostationer för kortvåg omfattar även 6\,m-bandet.
 
-Myndigheterna har gett instegscertare tillträde till amatörradioband
-som är exklusiva för amatörradio vilket innebär att ett antal populära
-band inte finns med. Arbete fortsätter på att försöka tillföra även 70
-cm bandet (432--438 MHz) till de band som är tillåtna för
-instegsamatörer men det har inte kommit med i denna utgåva av PTS
-undantagsföreskrift.
+Myndigheterna har gett instegscertare tillträde till amatörradioband som är
+exklusiva för amatörradio vilket innebär att ett antal populära band inte finns
+med. Arbete fortsätter på att försöka tillföra även 70 cm bandet (432--438 MHz)
+till de band som är tillåtna för instegsamatörer men det har inte kommit med i
+denna utgåva av PTS undantagsföreskrift.
 
 \subsubsection{Effektrestriktioner instegscertifikat}
 
-På frekvensbanden 7, 14, 21, 28 och 15 MHz tillåter man 25 W PEP
-tillfört antennsystemet. Detta är effekten vid en key-down på
-morsenyckel. Antennvinsten är inte medräknad på dessa frekvensband.
+På frekvensbanden 7, 14, 21, 28 och 15 MHz tillåter man 25 W PEP tillfört
+antennsystemet. Detta är effekten vid en key-down på morsenyckel. Antennvinsten
+är inte medräknad på dessa frekvensband.
 
 För 144 MHz däremot är det 25\,W ERP vilket innebär att du får mata en
-halvvågsdipol direkt med 25\,W men om du ska använda riktantenner med
-högre antennförstärkning än 0\,dBd eller 2,15\,dBi så måste du sänka
-sändareffekten i motsvarande grad.
+halvvågsdipol direkt med 25\,W men om du ska använda riktantenner med högre
+antennförstärkning än 0\,dBd eller 2,15\,dBi så måste du sänka sändareffekten i
+motsvarande grad.
 
-Anledningen till denna skillnad är att det är ganska svårt att bygga
-antenner med hög förstärkning, eller att bestämma dess faktiska
-förstärkning på kortvågsbanden medan det för 145\,MHz och uppåt är
-betydligt enklare att få till det och dessutom mäta och bestämma
-antennens förstärkning.
+Anledningen till denna skillnad är att det är ganska svårt att bygga antenner
+med hög förstärkning, eller att bestämma dess faktiska förstärkning på
+kortvågsbanden medan det för 145\,MHz och uppåt är betydligt enklare att få till
+det och dessutom mäta och bestämma antennens förstärkning.
 
 \subsubsection{Restriktioner på utrustning för instegscertifikat}
 
-Som instegsamatör får man inte operera hemmabyggda sändare, modifierade
-sändare eller andra sändare som saknar CE-märkning. Det innebär att man måste
-hålla sig till fabriksbyggd utrustning som säljs på den europeiska marknaden.
+Som instegsamatör får man inte operera hemmabyggda sändare, modifierade sändare
+eller andra sändare som saknar CE-märkning. Det innebär att man måste hålla sig
+till fabriksbyggd utrustning som säljs på den europeiska marknaden.
 
 \subsubsection{Instegscertifikat utomlands}
 
 Certifikatet äger heller ingen giltighet utomlands så som det fulla,
-HAREC-baserade, amatörradiocertifikatet gör. Du får därför i de flesta fall
-inte ta med din radiosändare till andra länder och använda den där på
+HAREC-baserade, amatörradiocertifikatet gör. Du får därför i de flesta fall inte
+ta med din radiosändare till andra länder och använda den där på
 instegscertifikatet.
 
 \section{Undantag från tillståndsplikt}
@@ -224,11 +220,12 @@ yrkesbåtar SC + 4 siffror för fritidsbåtar.
 Amatörradion använder ett antal signaler, de viktigaste är:
 
 \begin{tabular}{ll}
-	SM & Amatörradiosignal utdelad av PTS (nya signaler tilldelas ej i serien)               \\
-	SA & Amatörradiosignal tilldelad av SSA                                                  \\
-	SK & Klubbsignaler (som regel tvåställiga efter distriktsiffran)                         \\
-	   & numera tilldelas även klubbar SA-signaler som är tvåställiga efter distriktssiffran \\
-	SL & Militära signaler (som regel två- eller treställiga efter distriktsiffran)
+	SM & Amatörradiosignal utdelad av PTS (nya signaler tilldelas ej i
+        serien) \\ SA & Amatörradiosignal tilldelad av SSA \\ SK & Klubbsignaler
+        (som regel tvåställiga efter distriktsiffran) \\ & numera tilldelas även
+        klubbar SA-signaler som är tvåställiga efter distriktssiffran \\ SL &
+        Militära signaler (som regel två- eller treställiga efter
+        distriktsiffran)
 \end{tabular}
 
 Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt och sedan
@@ -237,8 +234,8 @@ signalen. Exempel är SM0UEI som är min egen signal, distriktsiffran är 0 dvs
 hemmavarande i Stockholms län. Ett annat exempel kan vara SK5JV tidigare
 Fagersta amatörradioklubb.
 
-Repeatrar som tillhör klubbar får ofta signal efter klubben med
-tillägg /R för repeater.
+Repeatrar som tillhör klubbar får ofta signal efter klubben med tillägg /R för
+repeater.
 
 Det finns numera även ett stort antal signaler som är tillfälliga eller knutna
 till särskilda event, exempelvis scoutverksamhet som ibland sänder amatörradio
@@ -285,23 +282,21 @@ Sverige delas in i följande distrikt efter sina län:
           \href{https://SSA.SE}{ssa.se}}
 \end{figure}
 
-Distrikten förekommer som siffra i utdelade
-anropssignaler. Radioamatörer byter inte distriktsiffra under resa i
-annat distrikt, i stället används suffix (tillägg efter ordinarie
-signal) som t.ex. /M för mobil. Ofta uppger man "SM0UEI mobilt i
-SM3-land" (SM0UEI/3/M) ibland (SM0UEI/3M) för att påvisa att man
+Distrikten förekommer som siffra i utdelade anropssignaler. Radioamatörer byter
+inte distriktsiffra under resa i annat distrikt, i stället används suffix
+(tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man "SM0UEI
+mobilt i SM3-land" (SM0UEI/3/M) ibland (SM0UEI/3M) för att påvisa att man
 befinner sig utanför ordinarie distrikt.
 
-En radioamatör kan byta sin distriktsiffra om den sänder från ett
-annat distrikt än sitt hemmavarande. Man kan också göra ett tillägg
-med /n där n är den siffra för det distrikt man befinner sig i. En
-stockholmsamatör som befinner sig i Gävleborgs län kan alltså antingen
-använda SM3UEI eller SM0UEI/3 även med tillägget M för mobil och P för
-portabel om man så önskar.
+En radioamatör kan byta sin distriktsiffra om den sänder från ett annat distrikt
+än sitt hemmavarande. Man kan också göra ett tillägg med /n där n är den siffra
+för det distrikt man befinner sig i. En stockholmsamatör som befinner sig i
+Gävleborgs län kan alltså antingen använda SM3UEI eller SM0UEI/3 även med
+tillägget M för mobil och P för portabel om man så önskar.
 
-Det unika för en radioamatörs signal är alltså prefixet + suffixet,
-som exempel är identifieraren för SM0UEI prefixet SM och suffixet UEI
-eftersom distriktsiffran kan ändra sig.
+Det unika för en radioamatörs signal är alltså prefixet + suffixet, som exempel
+är identifieraren för SM0UEI prefixet SM och suffixet UEI eftersom
+distriktsiffran kan ändra sig.
 
 \clearpage
 
@@ -429,118 +424,123 @@ Det finns förstås många fler koder men detta anses som de vanligaste.
 
 Lokator (Maidenhead locator) är ett praktiskt sätt att tala om sin ungefärliga
 position genom att ange endast sex stycken tecken. En lokator kan t.ex. se ut
-som JO89VK vilket täcker in nordvästa Järfälla. Det finns många verktyg för
-att räkna på lokator där ute, det är bra att känna sin egen. Det finns appar
-för detta till telefonerna som både kan räkna på bäring, distans mellan två
-rutor och dessutom via telefonens GPS bestämma vilken lokator du för
-närvarande befinner dig i.
+som JO89VK vilket täcker in nordvästa Järfälla. Det finns många verktyg för att
+räkna på lokator där ute, det är bra att känna sin egen. Det finns appar för
+detta till telefonerna som både kan räkna på bäring, distans mellan två rutor
+och dessutom via telefonens GPS bestämma vilken lokator du för närvarande
+befinner dig i.
 
-Första paret dela in jorden i 18x18 fält, dvs 20 grader per fält longitud och
-10 grader per fält latitud. Varje sådant fält delas sedan in i 10x10 rutor som
+Första paret dela in jorden i 18x18 fält, dvs 20 grader per fält longitud och 10
+grader per fält latitud. Varje sådant fält delas sedan in i 10x10 rutor som
 numreras 0-9 på vardera axeln. Dessa i sin tur delas sedan in i 24x24 smårutor
 som då får storleksordningen 2.5 grader latitud och 5 grader long. vardera.
 
 \subsection{Uppträdande}
 
 När vi kör amatörradio finns det ett antal saker att tänka på som har att göra
-med hur vi beter oss mot varandra på banden. Se detta som en guide till hur
-man bör uppträda på banden.
+med hur vi beter oss mot varandra på banden. Se detta som en guide till hur man
+bör uppträda på banden.
 
-En radioamatör måste vara \textbf{tolerant}. Vi delar frekvenser med många
-andra personer, en del av dem kommer inte ha samma uppfattning som du själv
-har om saker och ting. Här gäller det att vara tolerant, förstående och
-framför allt inte bli upprörd över personer som kanske inte beter sig som du
-önskade att de betedde sig.
+En radioamatör måste vara \textbf{tolerant}. Vi delar frekvenser med många andra
+personer, en del av dem kommer inte ha samma uppfattning som du själv har om
+saker och ting. Här gäller det att vara tolerant, förstående och framför allt
+inte bli upprörd över personer som kanske inte beter sig som du önskade att de
+betedde sig.
 
-Radioamatörer är \emph{aldrig ensamma på banden} helt oavsett om någon svarar
-på ditt allmänna anrop eller ej så finns det i det närmaste \textbf{garanterat
+Radioamatörer är \emph{aldrig ensamma på banden} helt oavsett om någon svarar på
+ditt allmänna anrop eller ej så finns det i det närmaste \textbf{garanterat
   någon som lyssnar}.
 
 Tänk på vad du säger och att du undviker diskutera ämnen som kan verka
 \textbf{upprörande} eller \textbf{stötande}. Ämnen som bör undvikas är
 \textbf{religion} och livs\-å\-skå\-d\-ni\-ng, \textbf{politisk} ideologi,
 \textbf{ekonomiska} eller \textbf{sociala} frågor m.m. där motparter kan ha
-starka åsikter som inte nödvändigtvis stämmer med dina egna. Radion är inte
-ett agitationsrum för sådana frågor.
+starka åsikter som inte nödvändigtvis stämmer med dina egna. Radion är inte ett
+agitationsrum för sådana frågor.
 
 \textbf{Svordomar}, \textbf{könsord} och liknande undviker vi helt. Språket
-skall vara vårdat men behöver inte vara strikt. Tänk på att din motpart är
-inte den enda som lyssnar utan det finns \textit{andra amatörer som lyssnar},
+skall vara vårdat men behöver inte vara strikt. Tänk på att din motpart är inte
+den enda som lyssnar utan det finns \textit{andra amatörer som lyssnar},
 icke-amatörer som lyssnar, myndigheter som lyssnar och så vidare.
 
-Ha \textbf{förståelse} för att andra kanske inte har dina egna
-detaljkunskaper, professionalism med mera. Agera \textbf{ödmjukt} gentemot
-andra människor på banden.
+Ha \textbf{förståelse} för att andra kanske inte har dina egna detaljkunskaper,
+professionalism med mera. Agera \textbf{ödmjukt} gentemot andra människor på
+banden.
 
-Blir du ändå upprörd, undvik att \emph{agera på det} över huvud taget. Sänd
-inte över annans sändning, s.k. ''gummitumme'', eller stör på annat vis för du
-är upprörd. Avsluta hellre QSO:t, byt frekvens eller återkom lite senare när
-du lugnat ned dig. Tänk på att \textit{de flesta konflikter orsakas av
-  okunskap eller brist på förståelse}. \textbf{Agera vuxet} i sådana
-situationer och jobba för att \textbf{de-eskalera} situationen.
+Blir du ändå upprörd, undvik att \emph{agera på det} över huvud taget. Sänd inte
+över annans sändning, s.k. ''gummitumme'', eller stör på annat vis för du är
+upprörd. Avsluta hellre QSO:t, byt frekvens eller återkom lite senare när du
+lugnat ned dig. Tänk på att \textit{de flesta konflikter orsakas av okunskap
+  eller brist på förståelse}. \textbf{Agera vuxet} i sådana situationer och
+jobba för att \textbf{de-eskalera} situationen.
 
 En skicklig amatör \textit{lyssnar mycket innan sändning}. Vi anropar på ett
-korrekt sätt och avslutar på ett korrekt sätt. Vi försöker uppge våra
-respektive signaler på ett \emph{tydligt och läsligt sätt}, i dag finns det en
-tendens att sluddra över signalerna framför allt på 2m och 70cm banden, gör
-inte det. Tydlighet är en vinning i sig.
+korrekt sätt och avslutar på ett korrekt sätt. Vi försöker uppge våra respektive
+signaler på ett \emph{tydligt och läsligt sätt}, i dag finns det en tendens att
+sluddra över signalerna framför allt på 2m och 70cm banden, gör inte
+det. Tydlighet är en vinning i sig.
 
 När någon ny i ringen inträder, räkna upp de deltagande signalerna så att
-personen tydligt får en bild av alla som är med och vem som är på turen före
-och efter hen.
+personen tydligt får en bild av alla som är med och vem som är på turen före och
+efter hen.
 
 Vi pratar inte \textbf{nedvärderande} om personer varesig de är andra amatörer
 eller ej, eller en viss grupp av personer. Vi undviker \textbf{sexuella
   anspelningar} och vitsar ''\textbf{under bältet}'' liksom allt för
-\textbf{personliga detaljer}. Amatörradion är främst för \textbf{tekniska
-  diskussioner} av rent \textbf{privat natur} eller av \textbf{allmänt
-  intresse för hobbyn}, tester och prov med mera.
+\textbf{personliga detaljer}. Amatörradion är främst
+för \textbf{tekniska diskussioner} av rent \textbf{privat natur} eller
+av \textbf{allmänt intresse för hobbyn}, tester och prov med mera.
 
 Undvik väldigt \textbf{långa sändningspass}. Ibland händer det saker hos dina
 motstationer som att de får ett viktigt telefonsamtal eller måste springa ut i
 köket för katten har rivit ner något, ett barn ramlar eller annat som gör att
 man måste kvickt lämna radion. Att \textbf{långprata} i sådana lägen gör det
 svårt att tala om ''QRX --- jag måste ta hand om en sak, anropar dig igen om 5
-min.''. Enstaka gånger kanske man behöver förklara något lite längre men gör
-det till en vana att lämna luckor så ofta som möjligt.
+min.''. Enstaka gånger kanske man behöver förklara något lite längre men gör det
+till en vana att lämna luckor så ofta som möjligt.
 
 \textbf{Nödtrafik har alltid prioritet} och måste respekteras på alla
 frekvenser.
 
 \subsection{Repeatrar}
 
-Repeatrars syfte är främst att förlänga kommunikationen från mobila och
-portabla amatörsändare. Samtal mellan fasta stationer förekommer men om ni hör
-varandra på direkten, övergå gärna till en simplex-frekvens i stället för att
-belägga repeatern.
+Repeatrars syfte är främst att förlänga kommunikationen från mobila och portabla
+amatörsändare. Samtal mellan fasta stationer förekommer men om ni hör varandra
+på direkten, övergå gärna till en simplex-frekvens i stället för att belägga
+repeatern.
 
 Lämna luckor mellan er när ni växlar station som sänder. Gör det möjligt för
 andra att ''breaka-in'' särskilt om ert QSO fortsätter under längre tid. Ta
 hänsyn till att andra kanske vill använda repeatern för att nå personer som de
 inte kan nå annars. Hänsyn åt båda hållen förutsätts här.
 
-Repeatern är en begränsad resurs. Det är inte okay att lägga beslag på den
-under långa perioder när andra kanske behöver den, var ödmjuk inför att någon
-driver repeatern och har satt upp den i första hand för att supporta mobila
-stationer.
+Repeatern är en begränsad resurs. Det är inte okay att lägga beslag på den under
+långa perioder när andra kanske behöver den, var ödmjuk inför att någon driver
+repeatern och har satt upp den i första hand för att supporta mobila stationer.
 
 Nödtrafik har alltid prioritet.
 
 \subsection{QSO}
 
-Konsten att genomföra ett radiosamtal (QSO) i olika sammanhang. Ofta
-blir folk nervösa i början för hur detta går till. Man säger sin
-signal och motstationens i fel ordning eller liknande.
+Konsten att genomföra ett radiosamtal (QSO) i olika sammanhang. Ofta blir folk
+nervösa i början för hur detta går till. Man säger sin signal och motstationens
+i fel ordning eller liknande.
 
-Man börjar alltid med motstationens signal. Det bör fallas naturligt
-att ropa så och man avslutar anropet med sin egen signal så att
-motstationen dels vet vem som anropar men också andra hör. Kanske vill
-en annan station ha ett utbyte med dig om du inte får svar från den
-tilltänkta.
+Man börjar alltid med motstationens signal. Det bör fallas naturligt att ropa så
+och man avslutar anropet med sin egen signal så att motstationen dels vet vem
+som anropar men också andra hör. Kanske vill en annan station ha ett utbyte med
+dig om du inte får svar från den tilltänkta.
 
-Ett radiosamtal består som regel av tre delar. Först sker ett anrop, när kontakt etablerats utväxlas ett antal meddelande (dialog) och när man är klarar avslutas samtalet. Dessa tre delar är ganska standard. Man följer detta ganska strikt t.ex. på kortvågen där telefoni oftast innebär SSB. Anledningen är enkel, det går inte höra när någon släpper sändtangenten eller bara är tyst och tänker.
+Ett radiosamtal består som regel av tre delar. Först sker ett anrop, när kontakt
+etablerats utväxlas ett antal meddelande (dialog) och när man är klarar avslutas
+samtalet. Dessa tre delar är ganska standard. Man följer detta ganska strikt
+t.ex. på kortvågen där telefoni oftast innebär SSB. Anledningen är enkel, det
+går inte höra när någon släpper sändtangenten eller bara är tyst och tänker.
 
-När man kör FM över repeatrar på VHF/UHF är det inte lika vanligt att man både öppnar och avslutar varje sändning med motparten och sin egen signal. Men man skall regelbundet upprepa signalerna och i praktiken är det lämpligt att göra kanske var femte minut eller oftare.
+När man kör FM över repeatrar på VHF/UHF är det inte lika vanligt att man både
+öppnar och avslutar varje sändning med motparten och sin egen signal. Men man
+skall regelbundet upprepa signalerna och i praktiken är det lämpligt att göra
+kanske var femte minut eller oftare.
 
 \subsubsection{Anropet}
 
@@ -556,9 +556,13 @@ Därefter övergår radiosamtalet i dialog eller meddelandesändning.
 
 \subsubsection{Allmänt anrop}
 
-Används när man inte ropar på någon särskild motstation utan önskar samtal med vem som helst. På svenska använder man ofta just orden ''allmänt anrop'' medan på engelska är det vanligare att man uttalar CQ (seek you). Ett allmänt androp kan se ut såhär:
+Används när man inte ropar på någon särskild motstation utan önskar samtal med
+vem som helst. På svenska använder man ofta just orden ''allmänt anrop'' medan
+på engelska är det vanligare att man uttalar CQ (seek you). Ett allmänt androp
+kan se ut såhär:
 
--- Allmänt anrop, allmänt anrop, allmänt anrop från SM0UEI SM0UEI SM0UEI kallar allmänt anrop och lyssnar.
+-- Allmänt anrop, allmänt anrop, allmänt anrop från SM0UEI SM0UEI SM0UEI kallar
+allmänt anrop och lyssnar.
 
 Eller på engelska:
 
@@ -566,9 +570,12 @@ Eller på engelska:
 
 \subsubsection{Meddelandesändning}
 
--- SA0MAD från SM0UEI, tack för svaret. Din signal är 59 hos mig, mitt QTH är JO89WA och namnet är Anders. SA0MAD från SM0UEI kom.
+-- SA0MAD från SM0UEI, tack för svaret. Din signal är 59 hos mig, mitt QTH är
+JO89WA och namnet är Anders. SA0MAD från SM0UEI kom.
 
--- SM0UEI från SA0MAD, tack för rapporten. Din signal är 57 hos mig, jag befinner mig i JO89VK men kommer under kvällen byta QTH. Jag kommer då vara QRV på 3663 kHz. QSL? SM0UEI från SA0MAD.
+-- SM0UEI från SA0MAD, tack för rapporten. Din signal är 57 hos mig, jag
+befinner mig i JO89VK men kommer under kvällen byta QTH. Jag kommer då vara QRV
+på 3663 kHz. QSL? SM0UEI från SA0MAD.
 
 -- SA0MAD från SM0UEI, QSL på det, QRX 19.30 på frekvens 3663 kHz.
 
@@ -580,16 +587,38 @@ Eller på engelska:
 
 \subsubsection{Pile-up och tävling}
 
-Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu gäller det att spetsa öronen! Först gäller det att sålla. Rara signaler från långtbortistan ger mer poäng i en contest som regel eller från länder du inte kört osv beroende på regler. Försök att sålla med ''du som sänder från Florida'' eller ''VK7 kom igen'' osv till det är en station kvar. Kör den snabbt, ropa CQ igen och börja sålla igen. Stationer du hör signalen på kör du direkt.
+Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu
+gäller det att spetsa öronen! Först gäller det att sålla. Rara
+signaler från långtbortistan ger mer poäng i en contest som regel
+eller från länder du inte kört osv beroende på regler. Försök att
+sålla med ''du som sänder från Florida'' eller ''VK7 kom igen'' osv
+till det är en station kvar. Kör den snabbt, ropa CQ igen och börja
+sålla igen. Stationer du hör signalen på kör du direkt.
 
-Direkt när det uppstår en pile-up är det effektivt att köra split. Dvs du lyssnar 5--10\,kHz upp eller ned från den frekvens du sänder på. Det gör det lättare för dig att behålla kommandot under pile-up. Ligger du och sänder i ett frekvensområde som är särskilt ägnat för DX är det smart att lägga Rx-frekvensen strax utanför. Det undviker att man stökar ned i DX-bandet.
+Direkt när det uppstår en pile-up är det effektivt att köra split. Dvs
+du lyssnar 5--10\,kHz upp eller ned från den frekvens du sänder
+på. Det gör det lättare för dig att behålla kommandot under
+pile-up. Ligger du och sänder i ett frekvensområde som är särskilt
+ägnat för DX är det smart att lägga Rx-frekvensen strax utanför. Det
+undviker att man stökar ned i DX-bandet.
 
-Kör du split skall du säga det efter varje sändning. "CQ CQ CQ de Sierra Mike Zero Uniform Echo India listening 5 up" exempelvis. På CW bör en split vara minst 2 kHz och på SSB bör den vara minst 5 kHz ännu hellre 10 kHz. Tänk på att när du startar din split måste du kolla så att båda frekvenserna är ok. Låt inte din pile-up sprida ut sig för mycket även om det är kanske enklare för dig så är risken stor att den stör någon annan.
+Kör du split skall du säga det efter varje sändning. "CQ CQ CQ de Sierra Mike
+Zero Uniform Echo India listening 5 up" exempelvis. På CW bör en split vara
+minst 2 kHz och på SSB bör den vara minst 5 kHz ännu hellre 10 kHz. Tänk på att
+när du startar din split måste du kolla så att båda frekvenserna är ok. Låt inte
+din pile-up sprida ut sig för mycket även om det är kanske enklare för dig så är
+risken stor att den stör någon annan.
 
-Kör korta QSO. Utbyt snabbt den information som behövs och ta sedan nästa. Ha förståelse för att det kan bli krockar i en pile-up. När du hör en partiell signal eller station du vill prata med håll fast vid den. Om du har svårt att läsa den be den repetera tills ni är klara. Genom att du är auktoriteten på frekvensen kommer pile-up:en att lugna ned sig och vänta på sin tur. Om du ''hattar omkring'' är risken att all radiodisciplin far ut genom fönstret.
+Kör korta QSO. Utbyt snabbt den information som behövs och ta sedan nästa. Ha
+förståelse för att det kan bli krockar i en pile-up. När du hör en partiell
+signal eller station du vill prata med håll fast vid den. Om du har svårt att
+läsa den be den repetera tills ni är klara. Genom att du är auktoriteten på
+frekvensen kommer pile-up:en att lugna ned sig och vänta på sin tur. Om du
+''hattar omkring'' är risken att all radiodisciplin far ut genom fönstret.
 
-Ofta är det 1 kHz upp som gäller vid CW och digitala trafiksätt.
-Du vill försöka få tag i Södra Shetlandsöarna, ett mycket ovanligt DX, som har en stor pile up och ropar på 14.195 MHz
+Ofta är det 1 kHz upp som gäller vid CW och digitala trafiksätt.  Du vill
+försöka få tag i Södra Shetlandsöarna, ett mycket ovanligt DX, som har en stor
+pile up och ropar på 14.195 MHz
 
 \begin{tabular}{lrl}
 	Station & Frekvens & Meddelande                     \\ \hline
@@ -600,9 +629,14 @@ Du vill försöka få tag i Södra Shetlandsöarna, ett mycket ovanligt DX, som 
 	VP8SSI  &   14.195 & Thanks. QRZ VP8SSI 5 to 15 up.
 \end{tabular}
 
-Du kommer troligtvis att behöva upprepa din anropssignal flera gånger, men lyssna efter varje gång du ropat så att du hör vem han svarar. Svarar han inte dig så får du vänta tills han ropar något som indikerar att han avslutat kontakten. Exempelvis: Thanks, VP8SSI eller VP8SSI 5 to 15 up.
+Du kommer troligtvis att behöva upprepa din anropssignal flera gånger, men
+lyssna efter varje gång du ropat så att du hör vem han svarar. Svarar han inte
+dig så får du vänta tills han ropar något som indikerar att han avslutat
+kontakten. Exempelvis: Thanks, VP8SSI eller VP8SSI 5 to 15 up.
 
-Du deltar i en tävling där man skall ange singnalrapport och löpnumret från start av tävlingenpå den kontakt du har. Du har hitintills kontaktat 30 stationer i tävlingen. Du har hittat en ledig frekvens och ropar CQ.
+Du deltar i en tävling där man skall ange singnalrapport och löpnumret från
+start av tävlingenpå den kontakt du har. Du har hitintills kontaktat 30
+stationer i tävlingen. Du har hittat en ledig frekvens och ropar CQ.
 
 \begin{tabular}{ll}
 	Station & Meddelande                       \\ \hline
@@ -613,9 +647,18 @@ Du deltar i en tävling där man skall ange singnalrapport och löpnumret från 
 	SMØUEI  & 44 Thanks. QRZ SM0UEI
 \end{tabular}
 
-Notera att både när man jagar DX och när man deltar i tävlingar så ger man och får man signalrapporten 59 om man kör foni och 599 telegrafi åtminstone i internationella tävlingar för att minska risken för fel. Får du en annan signalrapport än 59 eller 599 i en tävling så är det viktigt du anger korrekt i din logg. I mer lokala tester som NAC och SAC förekommer det att man ger korrekta signalrapporter, alltså efter hur väl man hörs.
+Notera att både när man jagar DX och när man deltar i tävlingar så ger man och
+får man signalrapporten 59 om man kör foni och 599 telegrafi åtminstone i
+internationella tävlingar för att minska risken för fel. Får du en annan
+signalrapport än 59 eller 599 i en tävling så är det viktigt du anger korrekt i
+din logg. I mer lokala tester som NAC och SAC förekommer det att man ger
+korrekta signalrapporter, alltså efter hur väl man hörs.
 
-Om du försöker nå en motstation med pile-up var uppmärksam på dennes sändningar och vänta på din tur. Tala gärna om signal och var du sänder från men släpp sedan fram andra. Tänk på hur du själv skulle vilja att en pile-up på din egen station skulle vilja agera. Den gyllene regeln är också alltid lyssna först --- sänd sedan!
+Om du försöker nå en motstation med pile-up var uppmärksam på dennes sändningar
+och vänta på din tur. Tala gärna om signal och var du sänder från men släpp
+sedan fram andra. Tänk på hur du själv skulle vilja att en pile-up på din egen
+station skulle vilja agera. Den gyllene regeln är också alltid lyssna först ---
+sänd sedan!
 
 
 \newpage
@@ -624,8 +667,9 @@ Om du försöker nå en motstation med pile-up var uppmärksam på dennes sändn
 
 \subsection{Effekt i dBW och dBm}
 
-Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller relaterat
-1W (dBW). Tabell över effekt och decibelwatt nedan:
+Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller
+relaterat 1W (dBW). Tabell över effekt och decibelwatt nedan:
+
 \begin{table}[H]
 \centering
 \begin{tabular}{rrr|rrr|rrr}
@@ -677,9 +721,9 @@ Standard kalibrering för S-metern är enligt skalan i tabellen
 \subsubsection{Bandbredd olika modulationer}
 
 Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå
-när man ställer in sin radiostation. Detta gäller särskilt att beakta i
-närheten av nödfrekvenser eller bandkanten. När vi talar om bandbredder här
-förstås den bandbredd vari minst 98\% av signalens effekt befinner sig.
+när man ställer in sin radiostation. Detta gäller särskilt att beakta i närheten
+av nödfrekvenser eller bandkanten. När vi talar om bandbredder här förstås den
+bandbredd vari minst 98\% av signalens effekt befinner sig.
 
 \begin{table}[H]
 \centering
@@ -696,18 +740,18 @@ förstås den bandbredd vari minst 98\% av signalens effekt befinner sig.
 \end{table}
 
 *) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den
-högsta eller lägsta frekvensen utgår man från den inställda frekvensen
-$f$. För USB gäller då att högsta frekvensen är $f+3$\,kHz. För LSB blir det
+högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För
+USB gäller då att högsta frekvensen är $f+3$\,kHz. För LSB blir det
 $f-3$\,kHz. Detta innebär att om du sänder på 80\,m-bandet och du får sända
-telefoni från 3600--3800\,kHz och vill lägga dig i undre bandkanten och köra
-LSB skall du ställa in din radio på 3603\,kHz som lägsta frekvens. Använd
-gärna lite marginal och kör exempelvis 3605\,kHz i stället.
+telefoni från 3600--3800\,kHz och vill lägga dig i undre bandkanten och köra LSB
+skall du ställa in din radio på 3603\,kHz som lägsta frekvens. Använd gärna lite
+marginal och kör exempelvis 3605\,kHz i stället.
 
-Den egentliga modulationsfrekvensen är dock lite mer komplicerad. Normalt
-anges den verkliga modulationsfrekvensen som ca 2,7\,kHz och det beror på att
-man i regel filtrerar bort ljudet under 300\,Hz och det över 3000\,Hz. Detta
-innebär att det akustiska frekvensomfånget blir 300--3000\,Hz och därmed
-upptar signalen inte mer än 2,7\,kHz.
+Den egentliga modulationsfrekvensen är dock lite mer komplicerad. Normalt anges
+den verkliga modulationsfrekvensen som ca 2,7\,kHz och det beror på att man i
+regel filtrerar bort ljudet under 300\,Hz och det över 3000\,Hz. Detta innebär
+att det akustiska frekvensomfånget blir 300--3000\,Hz och därmed upptar signalen
+inte mer än 2,7\,kHz.
 
 Det är vanligt att man märker stationer som kör överdriven bandbredd. Antingen
 som en följd av att man vill öka sin modulationsvinst, okunskap eller man har
@@ -716,18 +760,18 @@ förbindelser.
 
 \subsubsection{Telegrafi, CW}
 
-CW står för continuous waves och innebär en rent omodulerad bärvåg. I
-mottagaren används en oscillator för att återskapa hörbar signal. Detta
-används för telegrafi och modulationsslaget är oftast A1A. Ibland sänds
-telegrafi som modulerad AM-bärvåg också som då moduleras med t.ex. 700\,Hz
-ton. Det är dock mindre vanligt.
+CW står för continuous waves och innebär en rent omodulerad bärvåg. I mottagaren
+används en oscillator för att återskapa hörbar signal. Detta används för
+telegrafi och modulationsslaget är oftast A1A. Ibland sänds telegrafi som
+modulerad AM-bärvåg också som då moduleras med t.ex. 700\,Hz ton. Det är dock
+mindre vanligt.
 
 Bandbredden för CW är i teorin mycket smal. I praktiken blir den lite beroende
 på frekvens från några Hz till något hundratal Hz beroende på frekvensband och
 sändarens beskaffenhet i form av jitter och frekvensstabilitet.
 
-Bandbredden hos CW består av fasbruset vilket normalt är så undertryckt att
-det egentligen inte betyder så mycker samt stig- respektive falltiden när man
+Bandbredden hos CW består av fasbruset vilket normalt är så undertryckt att det
+egentligen inte betyder så mycker samt stig- respektive falltiden när man
 nycklar eller släpper nyckeln. Sker detta mjukt är bandbredden låg, har man
 skarp in- eller urkoppling av bärvågen nyttjar man mer bandbredd.
 
