--- a/tex/rhb-forord.tex
+++ b/tex/rhb-forord.tex
@@ -1,4 +1,31 @@
-%förord
+\section*{Licens}
+
+Denna handbok är författad av Täpp Anders Sikvall, SM5UEI. Den är släppt under
+en creative commons licens som kallas för CC BY-NC-SA.
+
+I korthet innebär det att du får distribuera och trycka upp materialet
+hur du vill, dela med dig av det men inte för kommersiella ändamål. Du
+får dessutom använda materialet i dina egna alster men om du gör det
+ska du släppa dessa under samma licens. Mitt namn ska stå kvar i
+originalet och om du använder det i ett annat verk ska det vara
+tydligt att det är ett derivat.
+
+För fullständig information kan du besöka \\
+\url{https://creativecommons.org/licenses/by-nc-sa/4.0/deed.sv}
+
+Licensen gäller alla versioner av radiohandboken, alla utgåvor och
+alla utdrag ur den.
+
+\section*{Om författaren}
+
+Jag heter Täpp Anders Sikvall och har haft ett radiointresse sedan barnsben. När
+jag gick i gymnasiet tog jag amatörradiolicens efter dåtidens regler och har
+sedan haft amatörradio som en hobby.
+
+Jag jobbar också professionellt med radiosystem och på fritiden tycker jag om
+att gå i skog och mark (och köra portabelt). Jag utbildar också nya
+radioamatörer och är även en av SSA:s provförrättare.
+
 \section*{Förord}
 
 Detta är den uppdaterade utgåvan för november 2023. Det var ett tag sedan som
@@ -45,6 +72,14 @@ Karlholm, \DokumentDatum\\
 \clearpage
 
 \section*{Nyheter i denna utgåva}
+
+\begin{itemize}
+  \item Licensvillkoren för verket är uppdaterade
+  \item Om författaren tillagt
+\end{itemize}
+
+
+
 
 \todo{Fyll i vad som ändrats sedan sist}
 
