* Lagt till info och arbetat om första avsnittet

--- a/tex/init-1st.tex
+++ b/tex/init-1st.tex
@@ -7,7 +7,7 @@
 \newcommand{\Initialer}{SM5UEI}
 \newcommand{\Epostadress}{anders@sikvall.se}
 \newcommand{\DokYear}{19}
-\newcommand{\DokVersion}{2.3.0} % Glöm inte fixa versionen här!
+\newcommand{\DokVersion}{2.3.0} 
 \newcommand{\DokumentDatum}{\today}
 \newcommand{\Linkhome}{www.sikvall.se}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
