--- a/tex/rhb-forord.tex
+++ b/tex/rhb-forord.tex
@@ -76,11 +76,9 @@ Karlholm, \DokumentDatum\\
 \begin{itemize}
   \item Licensvillkoren för verket är uppdaterade
   \item Om författaren tillagt
+  \item Mer om kommersiell radio och myndighetsradio tillagt liksom information om
+  \item undantag från tillståndsplikt
 \end{itemize}
-
-
-
-
 \todo{Fyll i vad som ändrats sedan sist}
 
 \clearpage
