Rubrik på CTCSS-tabellen

--- a/tex/body.tex
+++ b/tex/body.tex
@@ -209,26 +209,27 @@ exempel. Det finns också lokala aktörer som har exempelvis taxiradio,
 byggföretag som har allmän kommunikationsradio på sina byggen och många andra
 varianter.
 
-Dessa behöver tillståndssökas och en licensavgift ska betalas årligen. 
+Dessa behöver tillståndssökas och en licensavgift ska betalas årligen.
 
 \subsection{Myndigheters radionät}
 
 Myndigheters radionät består i regel av de radionät som behövs för flera olika
-verksamheter så som brandbekämpning, räddningstjänst, polisens arbete samt även
-försvarsmakten räknas ibland in här. Från att ha haft flera olika system så har
-dessa system numera gått samman i RAKEL (radiokommunikation för effektiv
-ledning) i ett gemensamt radionät för alla blåljustjänster. RAKEL
+verksamheter så som brandbekämpning, räddningstjänst, polisens arbete samt
+även försvarsmakten räknas ibland in här. Från att ha haft flera olika system
+så har dessa system numera gått samman i RAKEL (radiokommunikation för
+effektiv ledning) i ett gemensamt radionät för alla blåljustjänster. RAKEL
 tillhandahåller också visst skydd mot avlyssning som standard men kan även
 förses med stark kryptografi för att skydda särskilt känslig information, så
 kallat ''end-to-end'' krypto (E2E).
 
-RAKEL används främst av sammhällsnyttiga tjänster och myndigheter men det finns
-också exempel på när mindre aktörer och även lokaltrafik har fått använda nätet
-så det är väl använt. RAKEL kommer på sikt fasas ut till förmån för ett nytt
-kommunikationsnät som bygger på 5G-teknik via de kommersiella operatörernas nät
-i viss mån samt där det behövs egna radiobasstationer på 700~MHz-bandet. Detta
-nya nät kallas ibland för SWEN (swedish emergency network) och befinner sig ännu
-på planeringsstadet även om prov kan komma ganska snart.
+RAKEL används främst av sammhällsnyttiga tjänster och myndigheter men det
+finns också exempel på när mindre aktörer och även lokaltrafik har fått
+använda nätet så det är väl använt. RAKEL kommer på sikt fasas ut till förmån
+för ett nytt kommunikationsnät som bygger på 5G-teknik via de kommersiella
+operatörernas nät i viss mån samt där det behövs egna radiobasstationer på
+700~MHz-bandet. Detta nya nät kallas ibland för SWEN (swedish emergency
+network) och befinner sig ännu på planeringsstadet även om prov kan komma
+ganska snart.
 
 Enligt myndigheten för samhällsskydd och beredskap (MSB) planerar man avveckla
 RAKEL till 2030 men sannolikt kommer det ta lite länge än så innan SWEN är helt
@@ -1035,6 +1036,7 @@ sub-kanaler. De som används är följande toner och frekvenser:
 \begin{table}[H]
 \centering
 \begin{tabular}{rr|rr|rr|rr|rr}
+\textbf{Nr} & \textbf{Frek} & \textbf{Nr} & \textbf{Frek} &\textbf{Nr} & \textbf{Frek} &\textbf{Nr} & \textbf{Frek} &\textbf{Nr} & \textbf{Frek} \textbf{Nr} \\ \hline
 	 1 &  67,0 &  2 &  69,3 &  3 &  74,4 &  4 &  77,0 &  5 &  79,7 \\ \hline
 	 6 &  82,5 &  7 &  85,4 &  8 &  88,5 &  9 &  91,5 & 10 &  94,8 \\ \hline
 	11 &  97,4 & 12 & 100,0 & 13 & 103,5 & 14 & 107,2 & 15 & 110,9 \\ \hline
