Uppdaterat vågutbredning lång- mellan- och kortvåg samt diverse annan småfix.

--- a/tex/body.tex
+++ b/tex/body.tex
@@ -1049,12 +1049,14 @@ sub-kanaler. De som används är följande toner och frekvenser:
 \caption{CTCSS-toner, nummer och frekvens}
 \end{table}
 
+\newpage % Layout
+
 \subsection{CTCSS-zoner i Sverige}
 
-Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS för
-att hindra att störningar uppkommer vid conds mm. Det ger också möjligheten
-för sändaramatörer att öppna just den repeater man önskar om man har flera på
-samma frekvens omkring sig.
+Rekommendationer för sändaramatörers repeatrar i olika distrikt och län att
+använda CTCSS för att hindra att störningar uppkommer vid conds mm. Det ger
+också möjligheten för sändaramatörer att öppna just den repeater man önskar om
+man har flera på samma frekvens omkring sig.
 
 Generellt för dessa är att sista siffran i CTCSS-frekvensen är samma som
 distriktsiffran.
@@ -1114,7 +1116,7 @@ föreligger.
 Amatörradioband finns inom de flesta av dessa frekvensband utom de högsta och
 lägsta frekvenserna.
 
-\subsection{Rundradiobenämningar och frekvensband}
+\subsection{Rundradiobenämningar på frekvensband}
 
 \begin{table}[H]
 \centering
@@ -1232,26 +1234,44 @@ dagtid. På de lägsta frekvenserna erhålls med hög sändareffekt goda förbin
 på stora avstånd globalt och används även för t.ex. malmprospektering,
 kommunikation med ubåtar i undervattensläge.
 
-\subsubsection{Kortvåg}
-
-God rymdvågsutbredning med mycket lång räckvidd redan med låg effekt men
-samtidigt starkt avhängigt radiokonditionerna. Med ökande frekvens blir
-jonosfärreflektionen allt flackare vilket resulterar i en alltmer uttalad död
-zon (skip). Särskilt utmärkande för kortvågen är att den redan med låg effekt
-ger under gynnsamma konditioner extremt lång räckvidd via rymdvåg, ibland
-globalt.
-
 \subsubsection{Mellanvåg}
 
 Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge
-kraftig interferens mellan rymd- och markvåg som ofta upplevs som kraftig
-fädning. Särskilt utmärkande för mellanvågen är den i det närmaste avsaknanden
-av skipzon eftersom mark- och rymdvåg kompletterar varandra, jonosfärens D-skikt
-är heller inte särskilt uttalat i frekvensområdet dvs förbindelser via rymdvåg
-på korta avstånd mellan 100--300\,km är möjliga även dagtid under perioder med
-kraftig solaktivitet.
+kraftig interferens mellan rymd- och markvåg som då ofta upplevs som markerad
+fädning\footnote{Fädning är när signalstyrkan kraftigt varierar pga olika
+typer av utbredningsförhållanden, i just detta fall är det för att rymd- och
+markvågen kommer att glida i fas mot varandra och i bland samverka, ibland
+motverka varandra. Tiden mellan två toppar eller dalar i sådan fädning brukar
+vara ungefär 2-5 sekunder.
 
-\subsubsection{Ultrakortvåg, väldigt hög frekvens (VHF)}
+Det finns även andra typer av fädning som kan uppstå genom reflexer eller andra utbredningsfenomen men de är mer sällsynta på mellanvåg och ses främst på VHF/UHF.}.
+
+Särskilt utmärkande för mellanvågen är den i det närmaste avsaknanden av
+skipzon eftersom mark- och rymdvåg kompletterar och i regel överlappar
+varandra. Jonosfärens D-skikt är heller inte särskilt uttalat i
+frekvensområdet, det vill säga, förbindelser via rymdvåg på korta avstånd
+mellan 100--300\,km är möjliga även dagtid också under perioder med högre
+solaktivitet.
+
+\subsubsection{Kortvåg}
+
+God rymdvågsutbredning med mycket lång räckvidd redan med låg effekt men
+samtidigt starkt avhängigt radiokonditionerna som styrs i väldigt hög grad av
+både rymdvädret, tidpunkten på dagen och på året.
+
+Med ökande frekvens blir jonosfärreflektionen allt flackare vilket resulterar
+i en alltmer uttalad död zon (skipzon) där signalen endast med svårighet eller
+inte alls kan tas mot. Särskilt utmärkande för kortvågen är att den redan med
+låg effekt ger under gynnsamma konditioner extremt lång räckvidd via rymdvåg,
+inte sällan globalt vilket traditionellt har nyttjats för att sända nyheter
+runt hela världen, se exempelvis BBC World Service och liknande.
+
+I dag för kortvågssändning för rundradio en mer tynande tillvaro, Kina sänder
+fortfarande ett ganska stort antal kanaler och det finns några sändare kvar
+för BBC i UK och även tyskland men det är tveksamt om de lever kvar ens om
+några år. I stället har ju Internet tagit över som nyhetsförmedlare.
+
+\subsubsection{Ultrakortvåg (UKV) eller väldigt hög frekvens (VHF)}
 
 Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då
 endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan
