Fixat ett stort antal fel i kustradiokanalerna för Stockholms radio.

--- a/tex/body-vhf.tex
+++ b/tex/body-vhf.tex
@@ -343,20 +343,20 @@ Radiohorisonten är beräknad i nautiska mil, skeppet lägger till sin egen radi
 \textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} & \textbf{Kuststation} & \textbf{Kanal}& \textbf{Horisont}\\
 \hline
 \endhead
-Kalix          & 25 & 39 & Luleå         & 24 & 26 \\
-Skellefteå     & 23 & 44 & Umeå          & 26 & 54 \\
-Örnsköldsvik   & 28 & 42 & Mjällom       & 64 & 43 \\
-Kramfors       & 84 & 43 & Härnösand     & 23 & 36 \\
-Sundsvall      & 24 & 36 & Hudiksvall    & 25 & 54 \\
-Gävle          & 23 & 37 & Östhammar     & 24 & 44 \\
-Väddö          & 78 & 32 & Nacka         & 26, 23* & 43 \\
-Sv. högarna    & 84 & 15 & Södertälje    & 66 & 30 \\
-Torö           & 24 & 26 & Gotska sandön & 65 & 22 \\
+Kalix          & 60 & 39 & Luleå         & 61 & 26 \\
+Skellefteå     & 23 & 44 & Umeå          & 62 & 54 \\
+Örnsköldsvik   & 63 & 42 & Mjällom       & 64 & 43 \\
+Kramfors       & 83 & 43 & Härnösand     & 23 & 36 \\
+Sundsvall      & 60 & 36 & Hudiksvall    & 61 & 54 \\
+Gävle          & 23 & 37 & Östhammar     & 62 & 44 \\
+Väddö          & 82 & 32 & Nacka         & 26, 23* & 43 \\
+Sv. högarna    & 83 & 15 & Södertälje    & 66 & 30 \\
+Torö           & 61 & 26 & Gotska sandön & 65 & 22 \\
 Norrköping     & 64 & 43 & Västervik     & 23 & 45 \\
-Fårö           & 28 & 25 & Visby         & 25 & 23 \\
-Hoburgen       & 24 & 25 & Kalmar        & 26 & 40 \\
-Ölands s. udde & 78 & 23 & Karlskrona    & 81 & 24 \\
-Karlshamn      & 25 & 48 & Kivik         & 21 & 39\\
+Fårö           & 62 & 25 & Visby         & 63 & 23 \\
+Hoburgen       & 61 & 25 & Kalmar        & 60 & 40 \\
+Ölands s. udde & 22 & 23 & Karlskrona    & 81 & 24 \\
+Karlshamn      & 62 & 48 & Kivik         & 21 & 39\\
 \end{longtable}
 *) Sänder ej väder, varningar eller andra listor
 
@@ -369,11 +369,11 @@ Karlshamn      & 25 & 48 & Kivik         & 21 & 39\\
 \hline
 \endhead
 
-Strömstad   & 22 & 25 & Grebbestad & 26 & 25 \\
-Kungshamn   & 23 & 23 & Uddevalla  & 84 & 47 \\
-Tjörn       & 81 & 26 & Göteborg   & 24 & 43 \\
+Strömstad   & 22 & 25 & Grebbestad & 62 & 25 \\
+Kungshamn   & 23 & 23 & Uddevalla  & 61 & 47 \\
+Tjörn       & 81 & 26 & Göteborg   & 60 & 43 \\
 Grimeton    & 22 & 35 & Halmstad   & 62 & 52 \\
-Helsingborg & 24 & 28 & Malmö      & 27 & 25 \\
+Helsingborg & 60 & 28 & Malmö      & 65 & 25 \\
 \end{longtable}
 
 \textbf{Insjöarna}
@@ -384,11 +384,13 @@ Helsingborg & 24 & 28 & Malmö      & 27 & 25 \\
 \hline
 \endhead
 
-Västerås  & 25 & 40 & Trollhättan & 25 & 32 \\
-Bäckefors & 78 & 50 & Kinnekulle  & 01 & 43 \\
+Västerås  & 63 & 40 & Trollhättan & 03 & 32 \\
+Bäckefors & 05 & 50 & Kinnekulle  & 01 & 43 \\
 Karlstad  & 65 & 36 & Jönköping   & 23 & 49 \\
-Motala    & 26 & 47 &             &    &    \\
+Motala    & 62 & 47 & Hjälmaren   & $\dagger$   &    \\
 \end{longtable}
+
+$\dagger$) Hjälmaren är permanent tagen ur drift.
 
 \subsection{Frekvenser amatörradio VHF--UHF}
 
